fixed random scrollbar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,7 +26,7 @@ body {
 }
 
 .componentBody {
-    position: absolute;
+    position: fixed;
     top: 15vh;
     right: 0;
     bottom: 8vh;
@@ -132,7 +132,7 @@ input {
 
 /*logout*/
 .footer {
-    position: absolute;
+    position: fixed;
     bottom: 0rem;
     padding: 1rem 0 1rem 0;
     width: 100vw;
@@ -157,7 +157,7 @@ input {
 /*home*/
 
 .homeHeader {
-    position: absolute;
+    position: fixed;
     top: 0;
     width: 100vw;
     height: 15vh;
@@ -171,7 +171,7 @@ input {
 
 /* packing/unpacking */
 .packHeader {
-    position: absolute;
+    position: fixed;
     top: 0;
     width: 100vw;
     height: 15vh;
@@ -192,7 +192,7 @@ input {
     flex-direction: column;
     align-items: center;
 
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .subDynaDiv {
